render events and tasks based on html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <script src="html2bpmn.js"></script>
 
 <bpmn-process>
- Hello
+ <bpmn-event type="start">Hello world</bpmn-event>
+ <bpmn-task>This is a task</bpmn-task>
+ <bpmn-task>This is a task</bpmn-task>
+ <bpmn-event type="end">Task done</bpmn-event>
 </bpmn-process>
