allow empty paths -vertical move

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       </bpmn-gateway>
       <bpmn-gateway type="exclusive">
         <bpmn-path>
+          <bpmn-gateway type="exclusive">
+            <bpmn-path>
+              <bpmn-task>Task A</bpmn-task>
+            </bpmn-path>
+            <bpmn-path>
+              <bpmn-task>Task B</bpmn-task>
+            </bpmn-path>
+          </bpmn-gateway>
           <bpmn-task>Task A</bpmn-task>
         </bpmn-path>
         <bpmn-path>
@@ -30,7 +38,6 @@
           <bpmn-task>Task A</bpmn-task>
         </bpmn-path>
         <bpmn-path>
-          <bpmn-task>Task B</bpmn-task>
         </bpmn-path>
       </bpmn-gateway>
       <bpmn-task>Task B</bpmn-task>
